--- a/lib/dialog/dialog.scss
+++ b/lib/dialog/dialog.scss
@@ -45,5 +45,8 @@
     &-footer{
         margin-top: 36px;
         text-align: right;
+        .r-button{
+            margin-left: 15px;
+        }
     }
 }
