--- a/lib/demo/layout-demo.scss
+++ b/lib/demo/layout-demo.scss
@@ -1,4 +1,5 @@
-.r-layout {
+.item{
+  .r-layout {
     &:last-child {
       margin-bottom: 0;
     }
@@ -22,3 +23,4 @@
     text-align: center;
     line-height: 150px;
   }
+}
