--- a/example.scss
+++ b/example.scss
@@ -34,6 +34,9 @@ button, input{
 }
 
 .r-layout{
+    &.demo-container{
+        min-height: 100vh;
+    }
     >.r-header{
         display: flex;
         align-items: center;
@@ -46,12 +49,22 @@ button, input{
     }
     >.r-sider{
         border-right: 1px solid #D3D3D3;;
-        li{
-            line-height: 54px;
-            font-size: 15px;
-            color: #888888;
-            padding-left: 50px;
-        }
+        li>a{
+                line-height: 54px;
+                font-size: 15px;
+                color: #888888;
+                padding-left: 50px;
+                display: inline-block;
+                width: 100%;
+                font-family: PingFangSC-Regular;
+                &:hover{
+                    color:#0161FB;      
+                }
+                &.active{
+                    background: #DAE8FF;
+                    color: #0161FB;
+                }
+            }      
     }
     >.r-content{
         
