修改代码展示主题

--- a/lib/demo/demo.scss
+++ b/lib/demo/demo.scss
@@ -18,8 +18,12 @@
             padding: 30px;
             margin-bottom: 40px;
         }
-        pre .token{
+        pre 
+        {
+            .token{
             font-family:Consolas, 'Courier New', monospace;
+      
+            }
         }
     }
     &.layout{
