--- a/lib/demo/demo.scss
+++ b/lib/demo/demo.scss
@@ -9,22 +9,38 @@
         }
     }
     
-    .demo{
+    .content{
         padding:40px;
         .item{
             background: #FFFFFF;
             box-shadow: 0 2px 14px 0 rgba(0,0,0,0.10);
             border-radius: 4px;
-            padding: 30px;
+            // padding: 30px;
             margin-bottom: 40px;
-        }
-        pre 
-        {
-            .token{
-            font-family:Consolas, 'Courier New', monospace;
-      
+            .demo{
+                border-bottom: 1px solid #eee;
+                padding: 30px;
+            }
+            .codeControl{
+                padding: 10px 0;
+            
+                border-bottom: 1px solid #eee;
+                text-align: center;
+                cursor: pointer;
+                span{
+                    color: #999;
+                    font-size: 12px;
+                }
+            }
+            pre{
+                padding:18px 24px;
+                font-size: 12px;
+                .token{
+                    font-family:Menlo,Monaco,Consolas, 'Courier New', monospace;                 
+                }
             }
         }
+        
     }
     &.layout{
         .item{
